// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graphql-reTag test suite a few fragments test 1`] = `
"fragment image on Image {
  large
  inline
}

fragment comment on Comment {
  author {
    username
  }
  content
}

query GetAllPosts {
  allPosts {
    title
    images {
      ...image
    }
    comments {
      ...comment
    }
  }
}
"
`;

exports[`graphql-reTag test suite a few nested fragments used a few times test 1`] = `
"fragment image on Image {
  large
  inline
}

fragment user on User {
  username
  avatar {
    ...image
  }
}

query GetAllPosts {
  allPosts {
    title
    author {
      ...user
    }
    images {
      ...image
    }
    comments {
      author {
        ...user
      }
      image {
        ...image
      }
      message
    }
  }
}
"
`;

exports[`graphql-reTag test suite nested fragments test 1`] = `
"fragment image on Image {
  large
  inline
}

fragment user on User {
  username
  image {
    ...image
  }
}

query GetAllPosts {
  allPosts {
    title
    author {
      ...user
    }
  }
}
"
`;

exports[`graphql-reTag test suite no fragments test 1`] = `
"query GetAllPosts {
  allPosts {
    title
  }
}
"
`;

exports[`graphql-reTag test suite single fragment used one time test 1`] = `
"fragment image on Image {
  large
  inline
}

query GetAllPosts {
  allPosts {
    title
    images {
      ...image
    }
  }
}
"
`;
